# character-framework

./: .gitignore  CLAUDE.md  LICENSE  README.md
data/shell/noshita_growing_tube/growing_tube_model_estimation-main/: .gitignore  README.md  pyproject.toml
data/shell/noshita_growing_tube/growing_tube_model_estimation-main/data/: .gitignore
data/shell/noshita_growing_tube/growing_tube_model_estimation-main/growing_tube_model_estimation/: __init__.py  _version.py
data/shell/noshita_growing_tube/growing_tube_model_estimation-main/growing_tube_model_estimation/growing_tube/: __init__.py  _growing_tube_model.py  _growting_tube_estimation.py
data/shell/noshita_growing_tube/growing_tube_model_estimation-main/growing_tube_model_estimation/io/: __init__.py  _mv3d.py
data/shell/noshita_growing_tube/growing_tube_model_estimation-main/notebooks/: parameter_estimation.ipynb
docs/: Gastropod Shell Data Discovery.md  beta_collapse_3rd_register_design.md  crosscheck_request_gyrator_minting.md  gmam_plan.md  handoff_next_session.md  research_prompt_beta_3rd_register_substrate.md  research_prompt_beta_r3_derivation.md  research_prompt_chirality_sector_independence.md  research_prompt_current_aids_escape_interpretation.md  research_prompt_current_aids_escape_prefactor_theorem.md  research_prompt_driven_ness_transverse.md  research_prompt_real_frustrated_cycle.md  research_prompt_ring_laser_move3_data.md  research_prompt_second_minting_instance.md  research_prompt_second_minting_instance_v2.md  research_prompt_shell_data_sources.md  research_prompt_tdt_move4_real_substrate.md  (+2 more)
(+78 files in other folders)
